--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
     <h1>WW1 Simulator</h1>
     <form>
-   
+   <label for="country>Pick Country Here</label>
         <select id="country">
             
             <option value="France">France</option>
