--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     <button onclick="fight()">Fight</button>
      <button onclick="randoms()">Randomise 12/10</button>
      <button onclick="deletes()">Delete</button>
+     <a href='https://www.free-counters.org/'>Free-Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=06ad795ce0de4f01ba66298026883baf2bbb41da'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1393474/t/0"></script>
     <br>
     <br>
     <div class="container">
