--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
             "Luxembourg": 3,
             "Italy": 10,
             "Japan": 12,
+            "Greek Royalists": 9,
+            "Ethiopia": 5,
+            "Post-Armistice Romania": 6,
 
         }
 
@@ -167,7 +170,7 @@
             teams = true
 
             if (teams) {
-                country.innerHTML = "<option value='Germany'>Germany</option><option value='Austria Hungary'>Austria Hungary</option><option value='Ottoman Empire'>Ottoman Empire</option><option value='Bulgaria'>Bulgaria</option>"
+                country.innerHTML = "<option value='Germany'>Germany</option><option value='Austria Hungary'>Austria Hungary</option><option value='Ottoman Empire'>Ottoman Empire</option><option value='Bulgaria'>Bulgaria</option><option value='Ethiopia'>Ethiopia</option><option value='Greek Royalists'>Greek Royalists</option><option value='Post-Armistice Romania'>Post-Armistice Romania</option>"
             }
 
             
@@ -216,6 +219,9 @@
                 "Austria Hungary",
                 "Ottoman Empire",
                 "Bulgaria",
+                "Greek Royalists",
+            "Ethiopia",
+            "Post-Armistice Romania",
         ]
 
         let eternete = [
