--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <button id="next" onclick="nextTeam()">Team 2</button>
     <button onclick="submit()">Submit</button>
     <button onclick="fight()">Fight</button>
-     <button onclick="randoms()">Randomise 12/10</button>
+     <button onclick="randoms()">Randomise 10/10</button>
      <button onclick="deletes()">Delete</button>
  <a href='https://www.free-counters.org/'>Free-Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e6040235445b418a651f0135544614c22a8937c7'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1393475/t/5"></script>
@@ -121,28 +121,28 @@
         let team2 = []
         let teams = false
 
-        let texto = "<option value='France'>France</option><option value='Russia'>Russia</option><option value='Britain'>United Kingdom</option><option value='Serbia'>Serbia</option><option value='Romania'>Romania</option><option value='Montenegro'>Montenegro</option><option value='Greece'>Greece</option><option value='Belgium'>Belgium</option><option value='Luxembourg'>Luxembourg/option>"
+        let texto = "<option value='France'>France</option><option value='Russia'>Russia</option><option value='Britain'>United Kingdom</option><option value='Serbia'>Serbia</option><option value='Romania'>Romania</option><option value='Montenegro'>Montenegro</option><option value='Greece'>Greece</option><option value='Belgium'>Belgium</option><option value='Luxembourg'>Luxembourg</option>"
         
 
         const countryvalues = {
-            "Germany": 17,
-            "France": 15,
-            "Russia": 16,
-            "Austria Hungary": 11,
+            "Germany": 16,
+            "France": 14,
+            "Russia": 13,
+            "Austria Hungary": 10,
             "Britain": 20,
-            "Serbia": 10,
-            "Ottoman Empire": 12,
-            "Bulgaria": 9,
-            "Romania": 8,
-            "Montenegro": 6,
-            "Greece": 14,
-            "Belgium": 11,
+            "Serbia": 11,
+            "Ottoman Empire": 11,
+            "Bulgaria": 10,
+            "Romania": 6,
+            "Montenegro": 4,
+            "Greece": 12,
+            "Belgium": 7,
             "Luxembourg": 3,
-            "Italy": 10,
-            "Japan": 12,
-            "Greek Royalists": 9,
-            "Ethiopia": 5,
-            "Post-Armistice Romania": 6,
+            "Italy": 11,
+            "Japan": 14,
+            "Greek Royalists": 8,
+            "Ethiopia": 6,
+            "Post-Armistice Romania": 5,
 
         }
 
@@ -209,7 +209,7 @@
         }
 
             let times = 10
-            let altimes = 12
+            let altimes = 10
             let count = 0
             let alcount = 0
         function randoms() {
