Add height and width to dialog styles

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     dialog {
         border-radius: 5px;
         padding: 10px;
+        height: 100px;
+        width: 150px;
     }
 
     button {
